# blake3_aead

./: LICENSE  readme.md
python/: blake3_aead.py  pyproject.toml  test_blake3_aead.py
python/stubs/: blake3.pyi
rust/: Cargo.toml
rust/benches/: bench.rs
rust/src/: lib.rs
rust/tests/: compare_python.rs
