[package]
name = "blake3_aead"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "an experimental authenticated cipher"
repository = "https://github.com/oconnor663/blake3_aead"
license = "CC0-1.0 OR Apache-2.0"
documentation = "https://docs.rs/blake3_aead"
readme = "../readme.md"
edition = "2021"

[features]
default = ["std"]
std = ["blake3/std"]

[dependencies]
blake3 = { version = "1", path = "../../BLAKE3" }
blake3_guts = { path = "../../BLAKE3/rust/guts" }
constant_time_eq = "0.2.5"

[dev-dependencies]
hex = "0.4.3"
page_size = "0.5.0"
rand = "0.8.5"
