[package]
name = "blake3_aead"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "an experimental authenticated cipher"
repository = "https://github.com/oconnor663/blake3_aead"
license = "CC0-1.0 OR Apache-2.0"
documentation = "https://docs.rs/blake3_aead"
readme = "../readme.md"
edition = "2021"

[features]
default = ["std"]
std = ["blake3/std"]

[dependencies]
blake3 = "1.5.5"
constant_time_eq = "0.3.1"

[dev-dependencies]
hex = "0.4.3"
page_size = "0.6.0"
rand = "0.9.0"
